Fix logo position on firefox

--- a/wordpress/wp-content/themes/bluearrow/assets/styles/_header.scss
+++ b/wordpress/wp-content/themes/bluearrow/assets/styles/_header.scss
@@ -30,6 +30,7 @@ nav {
     img {
       width: 70px;
       height: 70px;
+      display: inline-block;
     }
 
     h4 {
